# the-dance-of-turbines-path-homology-wind-farm-coordination

./: .gitignore  40_create_animation.py  40_farm_coordination_path_homology_blog.md  README.md  article.md  benchmark_rust.py  config.yaml  create_animation.py  farm_coordination.py  pyproject.toml
.github/workflows/: ci.yml
rust/bench/: Cargo.toml
rust/bench/src/: main.rs
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/py/: Cargo.toml
rust/py/src/: lib.rs
src/: compute_kernel.py
