[project]
name = "the-dance-of-turbines-path-homology-wind-farm-coordination"
version = "0.1.0"
description = "Companion code for Medium article: the dance of turbines path homology wind farm coordination"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "networkx>=3.4.0",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
