[project]
name = "the-dance-of-turbines-path-homology-wind-farm-coordination"
version = "0.1.0"
description = "Companion code for Medium article: the dance of turbines path homology wind farm coordination"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pytest>=8.0",
    "matplotlib>=3.10.9",
    "networkx>=3.4.0",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

# Optional Rust extension — build with:
#   pip install maturin && maturin develop --release -m rust/py/Cargo.toml
[tool.maturin]
manifest-path = "rust/py/Cargo.toml"
module-name = "the_dance_of_turbines_path_homology_wind_farm_coordination_rs"

